--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "build": "rimraf dist && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
-    "dev": "NODE_ENV=development node server",
+    "dev": "LOCAL_DEV=true NODE_ENV=development node server",
     "serve": "NODE_ENV=production node server"
   },
   "dependencies": {
