--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "build": "rimraf dist && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
     "dev": "LOCAL_DEV=true NODE_ENV=development node server",
-    "start": "NODE_ENV=production node server"
+    "start": "NODE_ENV=production node server",
+    "test": "karma start"
   },
   "dependencies": {
     "angular": "^1.4.7",
@@ -21,10 +22,12 @@
     "normalize.css": "^3.0.3"
   },
   "devDependencies": {
+    "angular-mocks": "^1.4.7",
     "autoprefixer": "^6.0.3",
     "babel": "^5.8.23",
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "chai": "^3.4.0",
     "css-loader": "^0.19.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "html-loader": "^0.3.0",
@@ -32,9 +35,18 @@
     "jshint": "^2.8.0",
     "jshint-loader": "^0.8.3",
     "json-loader": "^0.5.3",
+    "karma": "^0.13.11",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-mocha": "^0.2.0",
+    "karma-mocha-reporter": "^1.1.1",
+    "karma-sourcemap-loader": "^0.3.6",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.3.3",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "ng-cache-loader": "0.0.13",
     "postcss-loader": "^0.6.0",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.4.3",
     "stats-webpack-plugin": "^0.2.2",
     "style-loader": "^0.12.4",
