--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chai": "^3.4.0",
     "css-loader": "^0.19.0",
     "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
     "html-loader": "^0.3.0",
     "html-webpack-plugin": "^1.6.2",
     "jshint": "^2.8.0",
@@ -50,6 +51,7 @@
     "rimraf": "^2.4.3",
     "stats-webpack-plugin": "^0.2.2",
     "style-loader": "^0.12.4",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.4.1"
