--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "dependencies": {
     "angular": "^1.4.7",
+    "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
+    "bootstrap": "^3.3.5",
     "express": "^4.13.3",
+    "jquery": "^2.1.4",
     "normalize.css": "^3.0.3"
   },
   "devDependencies": {
